refactor code and unit test
