# docs/swagger.json
@@ -40,7 +40,7 @@
                 }
             }
         },
-        "/admin/delete/{id}": {
+        "/admin/delete/{userid}": {
             "post": {
                 "description": "Xoa User",
                 "consumes": [
@@ -349,51 +349,6 @@
                     }
                 }
             },
-            "put": {
-                "description": "Sua post",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "UpdatePost"
-                ],
-                "summary": "Sua post",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "userid",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Update Post",
-                        "name": "post",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.PostSwagger"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.JsonResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.JsonResponse"
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "Tao post",
                 "consumes": [
@@ -467,6 +422,58 @@
                         "name": "postid",
                         "in": "path",
                         "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.JsonResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.JsonResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Sua post",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "UpdatePost"
+                ],
+                "summary": "Sua post",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "userid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Post ID",
+                        "name": "postid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update Post",
+                        "name": "post",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.PostSwagger"
+                        }
                     }
                 ],
                 "responses": {
@@ -558,6 +565,9 @@
         },
         "models.Post": {
             "type": "object",
+            "required": [
+                "caption"
+            ],
             "properties": {
                 "caption": {
                     "type": "string"
